--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>nl.erends</groupId>
     <artifactId>advent-of-code</artifactId>
-    <version>2021.10-SNAPSHOT</version>
+    <version>2021.11-SNAPSHOT</version>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.source>11</maven.compiler.source>
@@ -13,6 +13,9 @@
         <log4j.version>2.15.0</log4j.version>
         <junit.version>5.8.2</junit.version>
     </properties>
+    <prerequisites>
+        <maven>3.6.3</maven>
+    </prerequisites>
     <build>
         <plugins>
             <plugin>
@@ -23,12 +26,12 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
-                <version>2.22.0</version>
+                <version>3.0.0-M5</version>
             </plugin>
             <plugin>
                 <groupId>org.jacoco</groupId>
                 <artifactId>jacoco-maven-plugin</artifactId>
-                <version>0.8.5</version>
+                <version>0.8.7</version>
                 <executions>
                     <execution>
                         <goals>
