--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -19,7 +19,7 @@ jobs:
     - uses: actions/setup-java@v3
       with:
         java-version: '17.0.5'
-        distribution: 'oracle'
+        distribution: 'zulu'
         cache: maven
     - name: Build with Maven
       run: mvn -B package --file pom.xml
