--- a/aoc-2023/pom.xml
+++ b/aoc-2023/pom.xml
@@ -24,6 +24,17 @@
             <artifactId>aoc-util</artifactId>
             <version>1.0.0-SNAPSHOT</version>
         </dependency>
+        <dependency>
+        <groupId>org.graphstream</groupId>
+        <artifactId>gs-core</artifactId>
+        <version>2.0</version>
+    </dependency>
+        <dependency>
+            <groupId>org.graphstream</groupId>
+            <artifactId>gs-ui-swing</artifactId>
+            <version>2.0</version>
+        </dependency>
+
     </dependencies>
 
 </project>
