--- a/pom.xml
+++ b/pom.xml
@@ -21,8 +21,6 @@
     </modules>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <maven.compiler.source>17</maven.compiler.source>
-        <maven.compiler.target>17</maven.compiler.target>
         <log4j.version>2.23.1</log4j.version>
         <junit.version>5.10.2</junit.version>
     </properties>
@@ -57,8 +55,7 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.13.0</version>
                 <configuration>
-                    <source>17</source>
-                    <target>17</target>
+                    <release>21</release>
                 </configuration>
             </plugin>
         </plugins>
