--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,7 @@
         <module>aoc-2021</module>
         <module>aoc-2022</module>
         <module>aoc-2023</module>
+        <module>aoc-2024</module>
     </modules>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
