--- a/pom.xml
+++ b/pom.xml
@@ -68,6 +68,11 @@
                     <proc>full</proc>
                 </configuration>
             </plugin>
+            <plugin>
+                <groupId>org.sonarsource.scanner.maven</groupId>
+                <artifactId>sonar-maven-plugin</artifactId>
+                <version>4.0.0.4121</version>
+            </plugin>
         </plugins>
     </build>
     <dependencies>
