--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,7 @@
         <module>aoc-2022</module>
         <module>aoc-2023</module>
         <module>aoc-2024</module>
+        <module>aoc-2025</module>
     </modules>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
