--- a/aoc-2025/pom.xml
+++ b/aoc-2025/pom.xml
@@ -10,6 +10,14 @@
     </parent>
 
     <artifactId>aoc-2025</artifactId>
-    <version>0.1-SNAPSHOT</version>
+    <version>1.2-SNAPSHOT</version>
+
+    <dependencies>
+        <dependency>
+            <groupId>nl.erends</groupId>
+            <artifactId>aoc-util</artifactId>
+            <version>1.0.0-SNAPSHOT</version>
+        </dependency>
+    </dependencies>
 
 </project>
